Extract more hardcoded strings to i18n
- Redis configuration error page
- Doorkeeper authorization error
- Rules confirm, category_rule_cta, condition_group
- Tag deletions
- Valuations show
- Budget over_allocation_warning

--- a/config/locales/views/budgets/en.yml
+++ b/config/locales/views/budgets/en.yml
@@ -1,6 +1,9 @@
 ---
 en:
   budgets:
+    over_allocation_warning:
+      over_allocated_message: You have over-allocated your budget. Please fix your allocations.
+      fix_allocations: Fix allocations
     show:
       categories: Categories
       edit: Edit
