--- a/config/locales/views/valuations/en.yml
+++ b/config/locales/views/valuations/en.yml
@@ -28,3 +28,5 @@ en:
       note_placeholder: Add any additional details about this entry
       overview: Overview
       settings: Settings
+      account_value_on_date: Account value on date
+      update_value: Update value
