--- a/config/locales/views/tags/en.yml
+++ b/config/locales/views/tags/en.yml
@@ -22,3 +22,7 @@ en:
       edit: Edit
     update:
       updated: Tag updated
+  tag:
+    deletions:
+      new:
+        delete_and_reassign: Delete and reassign
