Extract hardcoded strings from more views to i18n
- credit_cards/_overview: edit_account_details
- properties (new, address, tabs/_overview): form labels and buttons
- import views: template found, clean data, mappings
- imports/_revert_failure: title, message, button
- settings/llm_usages/show: complete i18n extraction
- settings/api_keys/created.turbo_stream: use existing translations
- loans/tabs/_overview: edit_loan_details
- vehicles/tabs/_overview: edit_account_details

--- a/config/locales/views/credit_cards/en.yml
+++ b/config/locales/views/credit_cards/en.yml
@@ -20,6 +20,7 @@ en:
       annual_fee: Annual Fee
       apr: APR
       available_credit: Available Credit
+      edit_account_details: Edit account details
       expiration_date: Expiration Date
       minimum_payment: Minimum Payment
       unknown: Unknown
