Extract hardcoded strings from rules, transfers, and valuations views
- rules/new.html.erb: dialog title and back link
- transfers/show.html.erb: labels in overview section and category select
- valuations/confirm_create.html.erb: dialog title and submit button
- valuations/confirm_update.html.erb: dialog title and submit button

--- a/config/locales/views/rules/en.yml
+++ b/config/locales/views/rules/en.yml
@@ -2,6 +2,9 @@
 en:
   rules:
     no_action: No Action
+    new:
+      title: "New %{resource_type} rule"
+      back_to_rules: Back to rules
     index:
       title: Rules
       delete_all: Delete all rules
