--- a/config/locales/views/transfers/en.yml
+++ b/config/locales/views/transfers/en.yml
@@ -27,5 +27,11 @@ en:
       note_placeholder: Add a note to this transfer
       overview: Overview
       settings: Settings
+      from: From
+      to: To
+      date: Date
+      amount: Amount
+      category: Category
+      uncategorized: Uncategorized
     update:
       success: Transfer updated
