Extract hardcoded strings from trades, transfer_matches, onboardings, categories, and budgets
- trades/_form.html.erb and show.html.erb: type select options
- transfer_matches/new.html.erb and _matching_fields.html.erb: complete i18n
- onboardings/preferences.html.erb and show.html.erb: theme and form labels
- categories/_form.html.erb: color, icon, classification labels
- budgets/edit.html.erb: title, labels, and autosuggest section

--- a/config/locales/views/budgets/en.yml
+++ b/config/locales/views/budgets/en.yml
@@ -4,6 +4,14 @@ en:
     over_allocation_warning:
       over_allocated_message: You have over-allocated your budget. Please fix your allocations.
       fix_allocations: Fix allocations
+    edit:
+      title: Setup your budget
+      description: Enter your monthly earnings and planned spending below to setup your budget.
+      budgeted_spending: Budgeted spending
+      expected_income: Expected income
+      autosuggest_title: Autosuggest income & spending budget
+      autosuggest_description: This will be based on transaction history. AI can make mistakes, verify before continuing.
+      continue: Continue
     show:
       categories: Categories
       edit: Edit
