Extract hardcoded strings from settings nav, providers panels, and SSO admin views
- settings/_settings_nav.html.erb: LLM Usage, Providers, SSO Providers, Users labels
- settings/providers/show.html.erb: page title, description, section titles
- settings/providers/_provider_form.html.erb: configuration status messages
- settings/providers/_lunchflow_panel.html.erb: setup instructions, form labels
- settings/providers/_simplefin_panel.html.erb: setup instructions, form labels
- settings/providers/_enable_banking_panel.html.erb: setup instructions, form labels, status messages
- admin/sso_providers/index.html.erb: page title, descriptions, button labels
- admin/sso_providers/_form.html.erb: form labels, strategy options, help text

--- a/config/locales/views/admin/sso_providers/en.yml
+++ b/config/locales/views/admin/sso_providers/en.yml
@@ -4,12 +4,26 @@ en:
     unauthorized: "You are not authorized to access this area."
     sso_providers:
       index:
+        page_title: "SSO Providers"
         title: "SSO Providers"
-        description: "Manage single sign-on authentication providers for your instance"
+        description: "Manage single sign-on authentication providers for your instance."
+        restart_required: "Changes require a server restart to take effect."
+        configured_providers: "Configured Providers"
         add_provider: "Add Provider"
+        no_providers: "No SSO providers configured yet."
         no_providers_title: "No SSO Providers"
         no_providers_message: "Get started by adding your first SSO provider."
         note: "Changes to SSO providers require a server restart to take effect. Alternatively, enable the AUTH_PROVIDERS_SOURCE=db feature flag to load providers from the database dynamically."
+        enabled: "Enabled"
+        disabled: "Disabled"
+        edit: "Edit"
+        enable: "Enable"
+        disable: "Disable"
+        delete: "Delete"
+        configuration_mode: "Configuration Mode"
+        database_backed_providers: "Database-backed providers"
+        database_backed_description: "Load providers from database instead of YAML config"
+        database_backed_help_html: 'Set <code class="bg-surface px-1 py-0.5 rounded text-xs">AUTH_PROVIDERS_SOURCE=db</code> to enable database-backed providers. This allows changes without server restarts.'
         table:
           name: "Name"
           strategy: "Strategy"
@@ -44,34 +58,44 @@ en:
         oauth_configuration: "OAuth/OIDC Configuration"
         strategy_label: "Strategy"
         strategy_help: "The authentication strategy to use"
+        strategy_openid_connect: "OpenID Connect"
+        strategy_saml: "SAML 2.0"
+        strategy_google: "Google OAuth2"
+        strategy_github: "GitHub"
         name_label: "Name"
-        name_placeholder: "e.g., openid_connect, keycloak, authentik"
+        name_placeholder: "e.g., keycloak, authentik"
         name_help: "Unique identifier (lowercase, numbers, underscores only)"
-        label_label: "Label"
+        label_label: "Button Label"
         label_placeholder: "e.g., Sign in with Keycloak"
         label_help: "Button text shown to users"
-        icon_label: "Icon"
-        icon_placeholder: "e.g., key, google, github"
-        icon_help: "Lucide icon name (optional)"
+        icon_label: "Icon (optional)"
+        icon_placeholder: "e.g., key, shield"
+        icon_help: "Lucide icon name for the login button"
         enabled_label: "Enable this provider"
         enabled_help: "Users can sign in with this provider when enabled"
-        issuer_label: "Issuer"
-        issuer_placeholder: "https://accounts.google.com"
-        issuer_help: "OIDC issuer URL (will validate .well-known/openid-configuration endpoint)"
+        issuer_label: "Issuer URL"
+        issuer_placeholder: "https://your-idp.example.com/realms/your-realm"
+        issuer_help: "OIDC issuer URL (validates .well-known/openid-configuration)"
         client_id_label: "Client ID"
         client_id_placeholder: "your-client-id"
         client_id_help: "OAuth client ID from your identity provider"
         client_secret_label: "Client Secret"
         client_secret_placeholder_new: "your-client-secret"
-        client_secret_placeholder_existing: "••••••••••••••••"
+        client_secret_placeholder_existing: "••••••••"
         client_secret_help: "OAuth client secret (encrypted in database)"
-        client_secret_help_existing: " - leave blank to keep existing"
+        client_secret_help_existing: "Leave blank to keep existing secret"
+        callback_url_label: "Callback URL"
+        callback_url_help: "Configure this URL in your identity provider"
+        sp_callback_url: "SP Callback URL (ACS URL)"
+        sp_callback_url_help: "Configure this URL as the Assertion Consumer Service URL in your IdP"
         redirect_uri_label: "Redirect URI"
         redirect_uri_placeholder: "https://yourdomain.com/auth/openid_connect/callback"
         redirect_uri_help: "Callback URL to configure in your identity provider"
-        copy_button: "Copy"
+        copy_button: "Copy to clipboard"
         cancel: "Cancel"
         submit: "Save Provider"
+        create_provider: "Create Provider"
+        update_provider: "Update Provider"
         errors_title: "%{count} error prohibited this provider from being saved:"
         provisioning_title: "User Provisioning"
         default_role_label: "Default Role for New Users"
