Extract hardcoded strings from properties, imports, exports, and selection views
- Replace hardcoded strings in activity_date component
- Extract strings from admin/sso_providers new/edit views
- Internationalize family_exports/new dialog
- Extract strings from import/uploads/show view
- Internationalize properties form tabs, overview fields, balances, and edit
- Extract strings from transactions selection bar

--- a/config/locales/views/components/en.yml
+++ b/config/locales/views/components/en.yml
@@ -1,5 +1,11 @@
 ---
 en:
+  components:
+    ui:
+      account:
+        activity_date:
+          balance_tooltip: Manually set balance
+          no_balance_data: No balance data
   provider_sync_summary:
     title: Sync summary
     last_sync: "Last sync: %{time_ago} ago"
