--- a/config/locales/views/family_exports/en.yml
+++ b/config/locales/views/family_exports/en.yml
@@ -1,6 +1,19 @@
 ---
 en:
   family_exports:
+    new:
+      title: Export data
+      subtitle: Download your data in CSV format
+      whats_included: What's included
+      transactions: Transactions
+      trades: Trades
+      accounts: Accounts
+      tags: Tags
+      categories: Categories
+      merchants: Merchants
+      historical_balances: Historical balances
+      note_html: "<strong>Note:</strong> The download will start automatically. Check your browser's download folder for the file."
+      export_data: Export data
     list:
       in_progress: In progress
       complete: Complete
