--- a/config/locales/views/admin/sso_providers/en.yml
+++ b/config/locales/views/admin/sso_providers/en.yml
@@ -37,10 +37,14 @@ en:
         env_configured: "Env/YAML"
       new:
         title: "Add SSO Provider"
+        page_title: "Add SSO Provider"
         description: "Configure a new single sign-on authentication provider"
+        provider_configuration: "Provider Configuration"
       edit:
         title: "Edit SSO Provider"
+        page_title: "Edit SSO Provider: %{label}"
         description: "Update configuration for %{label}"
+        provider_configuration: "Provider Configuration"
       create:
         success: "SSO provider was successfully created."
       update:
