--- a/config/locales/views/properties/en.yml
+++ b/config/locales/views/properties/en.yml
@@ -3,6 +3,29 @@ en:
   properties:
     edit:
       edit: Edit %{account}
+      title: Edit property
+      save: Save
+      next: Next
+    balances:
+      title: Property value
+      estimated_market_value: Estimated market value
+      estimated_market_value_tooltip: The current estimated value of this property
+      save: Save
+      next: Next
+    form_tabs:
+      overview: Overview
+      value: Value
+      address: Address
+    overview_fields:
+      name: Name
+      name_placeholder: My property
+      select_type: Select property type
+      property_type: Property type
+      year_built: Year built
+      area: Area
+      area_unit: Unit
+      square_feet: Square feet
+      square_meters: Square meters
     form:
       address_line1: Street address
       address_line1_placeholder: 123 Main St
