Extract hardcoded breadcrumb strings to i18n keys
- Replace hardcoded breadcrumb labels with i18n symbol keys
- Update controllers: pages, reports, family_merchants, imports
- Update settings controllers: profiles, providers, api_keys, guides,
  hostings, securities, llm_usages, ai_prompts
- Add missing breadcrumb translations to shared/en.yml

--- a/config/locales/views/shared/en.yml
+++ b/config/locales/views/shared/en.yml
@@ -12,6 +12,16 @@ en:
     budgets: Budgets
     imports: Imports
     chats: Assistant
+    reports: Reports
+    guides: Guides
+    self_hosting: Self-Hosting
+    security: Security
+    llm_usage: LLM Usage
+    ai_prompts: AI Prompts
+    api_key: API Key
+    sync_providers: Sync Providers
+    profile_info: Profile Info
+    import_export: Import/Export
   shared:
     confirm_modal:
       accept: Confirm
