Fix French translations to match English keys structure
- Add missing nav translations in layout/fr.yml (Home, Transactions, etc.)
- Fix dashboard keys in pages/fr.yml (welcome, subtitle, balance_sheet)
- Add sidebar.tabs translations in accounts/fr.yml (All, Assets, Debts)
- Align chats/fr.yml keys with English version
- Add dev_user.rb seed for test@test.com / testtest credentials

--- a/config/locales/views/accounts/fr.yml
+++ b/config/locales/views/accounts/fr.yml
@@ -83,6 +83,28 @@ fr:
         manage: Gérer les comptes
     update:
       success: "Compte %{type} mis à jour"
+    sidebar:
+      missing_data: Données historiques manquantes
+      missing_data_description: "%{product} utilise des fournisseurs tiers pour récupérer l'historique des taux de change, des cours des titres, etc. Ces données sont nécessaires au calcul précis des soldes historiques des comptes."
+      configure_providers: Configurez vos fournisseurs ici.
+      tabs:
+        all: Tout
+        assets: Actifs
+        debts: Dettes
+      new_asset: Nouvel actif
+      new_debt: Nouvelle dette
+      new_account: Nouveau compte
+      new_account_group: "Nouveau %{account_group}"
+    types:
+      depository: Liquidités
+      investment: Investissement
+      crypto: Crypto
+      property: Immobilier
+      vehicle: Véhicule
+      other_asset: Autre actif
+      credit_card: Carte de crédit
+      loan: Prêt
+      other_liability: Autre passif
   email_confirmations:
     new:
       invalid_token: Lien de confirmation invalide ou expiré.
