--- a/config/locales/views/layout/fr.yml
+++ b/config/locales/views/layout/fr.yml
@@ -1,6 +1,13 @@
 ---
 fr:
   layouts:
+    application:
+      nav:
+        assistant: Assistant
+        budgets: Budgets
+        home: Accueil
+        reports: Rapports
+        transactions: Transactions
     auth:
       existing_account: Déjà un compte ?
       no_account: Nouveau sur %{product_name} ?
