Extract hardcoded strings from account selector and bank sync
- Replace Select/Navigate/Close/ESC in account container with t() calls
- Replace Bank Sync page title and providers label with t() calls
- Replace provider descriptions in bank_sync_controller with t() calls
- Add translations in en.yml and fr.yml for all new keys

--- a/config/locales/views/accounts/en.yml
+++ b/config/locales/views/accounts/en.yml
@@ -40,6 +40,11 @@ en:
       syncing: "Syncing accounts..."
     new:
       import_accounts: Import accounts
+      container:
+        select: Select
+        navigate: Navigate
+        close: Close
+        esc: ESC
       method_selector:
         connected_entry: Link account
         connected_entry_eu: Link EU account
